--- a/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
+++ b/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Aspose.Cells, Version=23.5.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aspose.Cells.23.5.0\lib\net40\Aspose.Cells.dll</HintPath>
+    <Reference Include="Aspose.Cells, Version=23.10.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aspose.Cells.23.10.0\lib\net40\Aspose.Cells.dll</HintPath>
     </Reference>
     <Reference Include="CsvHelper, Version=30.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.30.0.1\lib\net47\CsvHelper.dll</HintPath>
@@ -43,8 +43,8 @@
     <Reference Include="DotNetZip, Version=1.16.0.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetZip.1.16.0\lib\net40\DotNetZip.dll</HintPath>
     </Reference>
-    <Reference Include="HtmlAgilityPack, Version=1.11.46.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.11.46\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    <Reference Include="HtmlAgilityPack, Version=1.11.54.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.54\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=1.0.7.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.NETStandard.1.0.7\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -61,17 +61,20 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Pj.Library, Version=1.0.4.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pj.Library.1.0.4.15\lib\netstandard2.0\Pj.Library.dll</HintPath>
+    <Reference Include="Pj.Library, Version=1.0.4.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pj.Library.1.0.4.27\lib\netstandard2.0\Pj.Library.dll</HintPath>
     </Reference>
-    <Reference Include="Pj.Library.Secure, Version=1.0.4.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pj.Library.Secure.1.0.4.15\lib\netstandard2.0\Pj.Library.Secure.dll</HintPath>
+    <Reference Include="Pj.Library.Extended, Version=1.0.4.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pj.Library.Extended.1.0.4.27\lib\netstandard2.0\Pj.Library.Extended.dll</HintPath>
     </Reference>
-    <Reference Include="Pj.Library.ThirdParty, Version=1.0.4.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pj.Library.ThirdParty.1.0.4.15\lib\netstandard2.0\Pj.Library.ThirdParty.dll</HintPath>
+    <Reference Include="Pj.Library.Secure, Version=1.0.4.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pj.Library.Secure.1.0.4.27\lib\netstandard2.0\Pj.Library.Secure.dll</HintPath>
     </Reference>
-    <Reference Include="Selenium.Essentials, Version=1.0.5.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selenium.Essentials.1.0.5.15\lib\netstandard2.0\Selenium.Essentials.dll</HintPath>
+    <Reference Include="Pj.Library.ThirdParty, Version=1.0.4.27, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pj.Library.ThirdParty.1.0.4.27\lib\netstandard2.0\Pj.Library.ThirdParty.dll</HintPath>
+    </Reference>
+    <Reference Include="Selenium.Essentials, Version=1.0.5.25, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Essentials.1.0.5.25\lib\netstandard2.0\Selenium.Essentials.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -87,6 +90,9 @@
       <HintPath>..\packages\System.Diagnostics.EventLog.7.0.0\lib\net462\System.Diagnostics.EventLog.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Common, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Drawing.Common.7.0.0\lib\net462\System.Drawing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -114,8 +120,8 @@
       <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceProcess" />
-    <Reference Include="System.ServiceProcess.ServiceController, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ServiceProcess.ServiceController.7.0.0\lib\net462\System.ServiceProcess.ServiceController.dll</HintPath>
+    <Reference Include="System.ServiceProcess.ServiceController, Version=7.0.0.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ServiceProcess.ServiceController.7.0.1\lib\net462\System.ServiceProcess.ServiceController.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -130,20 +136,20 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TestAny.Essentials.Api, Version=1.0.5.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TestAny.Essentials.Api.1.0.5.15\lib\netstandard2.0\TestAny.Essentials.Api.dll</HintPath>
+    <Reference Include="TestAny.Essentials.Api, Version=1.0.5.25, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TestAny.Essentials.Api.1.0.5.25\lib\netstandard2.0\TestAny.Essentials.Api.dll</HintPath>
     </Reference>
-    <Reference Include="TestAny.Essentials.Core, Version=1.0.5.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TestAny.Essentials.Core.1.0.5.15\lib\netstandard2.0\TestAny.Essentials.Core.dll</HintPath>
+    <Reference Include="TestAny.Essentials.Core, Version=1.0.5.25, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TestAny.Essentials.Core.1.0.5.25\lib\netstandard2.0\TestAny.Essentials.Core.dll</HintPath>
     </Reference>
     <Reference Include="TimeZoneConverter, Version=6.1.0.0, Culture=neutral, PublicKeyToken=e20ab7d0d9479841, processorArchitecture=MSIL">
       <HintPath>..\packages\TimeZoneConverter.6.1.0\lib\net462\TimeZoneConverter.dll</HintPath>
     </Reference>
     <Reference Include="WebDriver, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selenium.WebDriver.4.9.1\lib\net48\WebDriver.dll</HintPath>
+      <HintPath>..\packages\Selenium.WebDriver.4.14.1\lib\netstandard2.0\WebDriver.dll</HintPath>
     </Reference>
     <Reference Include="WebDriver.Support, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Selenium.Support.4.9.1\lib\net48\WebDriver.Support.dll</HintPath>
+      <HintPath>..\packages\Selenium.Support.4.14.1\lib\netstandard2.0\WebDriver.Support.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -156,9 +162,11 @@
     <Compile Include="Runner\Bituach\SingleRunner_Bituach.cs" />
     <Compile Include="Runner\Gemel\LambdaFullDownload_Gemel.cs" />
     <Compile Include="Runner\Gemel\LambdaFullDownload_Gemel_All.cs" />
-    <Compile Include="Runner\Gemel\LambdaRunAll.cs" />
+    <Compile Include="Runner\Gemel\LambdaRunAll_Gemel.cs" />
     <Compile Include="Runner\Gemel\LambdaRunner.cs" />
     <Compile Include="Runner\Gemel\SingleRunner.cs" />
+    <Compile Include="Runner\General\LambdaDownload_Gemel_Bituch_Pensia.cs" />
+    <Compile Include="Runner\General\LambdaRunAllGeneral.cs" />
     <Compile Include="Runner\PensiaRunner.cs" />
     <Compile Include="Runner\Pensia\LambdaFullDownload_Pensia.cs" />
     <Compile Include="Runner\Pensia\LambdaFullDownload_Pensia_All.cs" />
@@ -189,17 +197,19 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Scripts\General\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.113.0.5672.6300\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.113.0.5672.6300\build\Selenium.WebDriver.ChromeDriver.targets'))" />
     <Error Condition="!Exists('..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets'))" />
-    <Error Condition="!Exists('..\packages\Selenium.WebDriver.4.9.1\build\Selenium.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.4.9.1\build\Selenium.WebDriver.targets'))" />
+    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.118.0.5993.7000\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.118.0.5993.7000\build\Selenium.WebDriver.ChromeDriver.targets'))" />
+    <Error Condition="!Exists('..\packages\Selenium.WebDriver.4.14.1\build\Selenium.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.4.14.1\build\Selenium.WebDriver.targets'))" />
   </Target>
-  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.113.0.5672.6300\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.113.0.5672.6300\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" />
-  <Import Project="..\packages\Selenium.WebDriver.4.9.1\build\Selenium.WebDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.4.9.1\build\Selenium.WebDriver.targets')" />
+  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.118.0.5993.7000\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.118.0.5993.7000\build\Selenium.WebDriver.ChromeDriver.targets')" />
+  <Import Project="..\packages\Selenium.WebDriver.4.14.1\build\Selenium.WebDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.4.14.1\build\Selenium.WebDriver.targets')" />
 </Project>
