--- a/AutomationZionet.Base/packages.config
+++ b/AutomationZionet.Base/packages.config
@@ -1,25 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aspose.Cells" version="23.5.0" targetFramework="net48" />
+  <package id="Aspose.Cells" version="23.10.0" targetFramework="net48" />
   <package id="CsvHelper" version="30.0.1" targetFramework="net48" />
   <package id="DotNetZip" version="1.16.0" targetFramework="net48" />
-  <package id="HtmlAgilityPack" version="1.11.46" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.54" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="Pj.Library" version="1.0.4.15" targetFramework="net48" />
-  <package id="Pj.Library.Secure" version="1.0.4.15" targetFramework="net48" />
-  <package id="Pj.Library.ThirdParty" version="1.0.4.15" targetFramework="net48" />
+  <package id="Pj.Library" version="1.0.4.27" targetFramework="net48" />
+  <package id="Pj.Library.Extended" version="1.0.4.27" targetFramework="net48" />
+  <package id="Pj.Library.Secure" version="1.0.4.27" targetFramework="net48" />
+  <package id="Pj.Library.ThirdParty" version="1.0.4.27" targetFramework="net48" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net48" />
-  <package id="Selenium.Essentials" version="1.0.5.15" targetFramework="net48" />
-  <package id="Selenium.Support" version="4.9.1" targetFramework="net48" />
-  <package id="Selenium.WebDriver" version="4.9.1" targetFramework="net48" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="113.0.5672.6300" targetFramework="net48" />
+  <package id="Selenium.Essentials" version="1.0.5.25" targetFramework="net48" />
+  <package id="Selenium.Support" version="4.14.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver" version="4.14.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="118.0.5993.7000" targetFramework="net48" />
   <package id="SharpZipLib.NETStandard" version="1.0.7" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
@@ -29,7 +31,7 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
-  <package id="TestAny.Essentials.Api" version="1.0.5.15" targetFramework="net48" />
-  <package id="TestAny.Essentials.Core" version="1.0.5.15" targetFramework="net48" />
+  <package id="TestAny.Essentials.Api" version="1.0.5.25" targetFramework="net48" />
+  <package id="TestAny.Essentials.Core" version="1.0.5.25" targetFramework="net48" />
   <package id="TimeZoneConverter" version="6.1.0" targetFramework="net48" />
 </packages>
