--- a/AutomationZionet.Projects.Practice/packages.config
+++ b/AutomationZionet.Projects.Practice/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Selenium.WebDriver" version="4.9.1" targetFramework="net48" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="113.0.5672.6300" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver" version="4.14.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="118.0.5993.7000" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
 </packages>
